services/api/k8s-api-working.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lead-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lead-api
  template:
    metadata:
      labels:
        app: lead-api
    spec:
      containers:
        - name: lead-api
          image: moringa-lead-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: lead-api
spec:
  selector:
    app: lead-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
